--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "riscv-emu"
-version = "0.1.0"
-authors = ["Roi Martin <jroi.martin@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+    "riscv-emu",
+    "nasm",
+    "fuzzer-objdump",
+]
