--- a/riscv-emu/Cargo.toml
+++ b/riscv-emu/Cargo.toml
@@ -8,3 +8,5 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.74"
+nasm = { path = "../nasm" }
